Description
Test output shows a ton of failures with error 1418:
https://reactos.org/testman/detail.php?id=32778242&prev=32777175
These are various scenarios in which we incorrectly fail OpenClipboard/SetClipboardData due to missing clipboard ownership.
Attachments
Issue Links
- relates to
 - 
                    
CORE-13408 Use after free during user32_winetest:clipboard
-         
 - Resolved
 
 -