[WIN32K:NTUSER] - Avoid crash on invalid format in UserEnumClipboardFormats. This is covered by user32_winetest but we currently fail that call before it can crash. The next commit will change that. CORE-13414

svn path=/trunk/; revision=75020